# Lastboard

./: README.md  package-lock.json  package.json  vite.config.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  linux.rs  macos.rs  windows.rs
